# CMake_CrossCompile_Template

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-buildroot-linux-gnueabihf.cmake  stm32-gcc-flags.cmake  stm32-gcc-postbuild.cmake
src/: CMakeLists.txt
src/stm32proj/: target-def.cmake
